--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: hsl(0, 0%, 95%);
 
     .content__all{
         width: 970px;
